--- a/libs/documentations/docs/core/inputs.mdx
+++ b/libs/documentations/docs/core/inputs.mdx
@@ -81,7 +81,9 @@ In Angular, we would have to pass in a `number` to a `number` Input
 `NumberInput` allows us to pass in different variants for `number` Input
 
 ```html
-<ngt-ambient-light [intensity]="1"></ngt-ambient-light> <ngt-ambient-light intensity="1"></ngt-ambient-light>
+<ngt-ambient-light [intensity]="1"></ngt-ambient-light>
+
+<ngt-ambient-light intensity="1"></ngt-ambient-light>
 ```
 
 ### `Ngt***`
