--- a/libs/documentations/docs/getting-started/installation.mdx
+++ b/libs/documentations/docs/getting-started/installation.mdx
@@ -8,10 +8,11 @@ sidebar_label: Installation
 
 NGT makes use of different libraries in the THREE.js ecosystem. Check the version of all the libraries before installing is always a good thing to do.
 
-| NGT Version | Angular Version | THREE Version | RxJS Version |
-| ----------- | --------------- | ------------- | ------------ |
-| <= ^4.0.0   | ^13.0.0         | ~0.137        | ^7.0.0       |
-| >= ^5.0.0   | ^13.0.0         | ~0.140        | ^7.0.0       |
+| NGT Version | Angular Version                 | THREE Version    | RxJS Version |
+| ----------- | ------------------------------- | ---------------- | ------------ |
+| <= ^4.0.0   | ^13.0.0                         | ~0.137           | ^7.0.0       |
+| >= ^5.0.0   | ^13.0.0                         | ~0.140 \| ~0.141 | ^7.0.0       |
+| >= ^6.0.0   | ^14.1.0 (make sure it is 14.1+) | ~0.141 \| ~0.142 | ^7.0.0       |
 
 :::tip
 
@@ -56,9 +57,11 @@ The generator (schematic) installs `three`, `@types/three`, and `@angular-three/
 NGT is a collection of packages that provide different Angular counterparts for different areas of THREE.js. To get started, we only need `@angular-three/core` and `three` (and its type definition `@types/three`)
 
 ```shell
-npm install @angular-three/core three@~0.139
-npm install --save-dev @types/three@~0.139
+npm install @angular-three/core three@~0.142
+npm install --save-dev @types/three@~0.142
 ```
+
+Next, go to the root `tsconfig.json` (or `tsconfig.base.json` in an Nx Workspace project) and add `skipLibCheck: true` to the `compilerOptions`
 
 ### Ecosystem
 
